works with S3 upload/download too

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,475 @@
-potassium
-torch
-transformers
-google-cloud-storage
+absl-py==1.4.0
+accelerate @ git+https://github.com/huggingface/accelerate.git@901ab69a1601ba1a7c63523356c5acb1d66b7ea9
+addict==2.4.0
+aenum==3.1.11
+aiodns==3.0.0
+aiofiles==22.1.0
+aiohttp==3.8.4
+aiohttp-retry==2.8.3
+aiosignal==1.3.1
+albumentations==1.3.0
+aleph-alpha-client==2.16.0
+aliyun-python-sdk-core==2.13.36
+aliyun-python-sdk-kms==2.16.0
+altair==4.2.2
+analytics-python==1.4.0
+antlr4-python3-runtime==4.9.3
+anyio==3.6.2
+apache-beam==2.46.0
+appdirs==1.4.3
+argon2-cffi==21.3.0
+argon2-cffi-bindings==21.2.0
+astunparse==1.6.2
+async-timeout==4.0.2
+atomicwrites==1.1.5
+attrs==19.3.0
+audioread==3.0.0
+Automat==0.8.0
+Babel==2.10.3
+backcall==0.1.0
+backoff==1.10.0
+banana-cli==0.0.12
+banana-dev==4.0.2
+basicsr==1.4.2
+bcrypt==4.0.1
+beartype==0.14.0
+beautifulsoup4==4.8.2
+bitsandbytes==0.37.2
+bleach==3.1.1
+blendmodes==2022
+blinker==1.4
+blosc==1.7.0
+boltons==23.0.0
+boto3==1.26.93
+botocore==1.29.93
+bottle==0.12.15
+cachetools==4.0.0
+caffe==1.0.0
+certifi==2022.12.7
+cffi==1.14.0
+chardet==3.0.4
+charset-normalizer==2.1.1
+chromadb==0.3.7
+clean-fid==0.1.29
+click==8.1.3
+clickhouse-connect==0.5.12
+clip @ git+https://github.com/openai/CLIP.git@d50d76daa670286dd6cacf3bcd80b5e4823fc8e1
+cloud-init==22.3.4
+cloudpickle==2.2.1
+cmake==3.25.0
+colorama==0.4.3
+command-not-found==0.3
+configobj==5.0.6
+constantly==15.1.0
+controlnet-aux==0.0.1
+crcmod==1.7
+cryptography==39.0.2
+ctop==1.0.0
+cycler==0.10.0
+Cython==0.29.14
+dask==2.8.1+dfsg
+dataclasses-json==0.5.7
+datasets==2.8.0
+dbus-python==1.2.16
+decorator==4.4.2
+defusedxml==0.6.0
+Deprecated==1.2.14
+deprecation==2.1.0
+diffusers==0.17.1
+dill==0.3.6
+distlib==0.3.0
+distro==1.4.0
+distro-info===0.23ubuntu1
+docker==4.1.0
+docopt==0.6.2
+duckdb==0.7.0
+einops==0.6.1
+encodec==0.1.1
+entrypoints==0.3
+et-xmlfile==1.0.1
+facexlib==0.2.5
+fairscale==0.4.4
+fastapi==0.90.1
+fastavro==1.7.3
+fasteners==0.18
+fastjsonschema==2.16.2
+ffmpeg-python==0.2.0
+ffmpy==0.3.0
+filelock==3.9.0
+filterpy==1.4.5
+flake8==3.7.9
+Flask==2.2.2
+Flask-Limiter==3.3.1
+flatbuffers==23.3.3
+fluidsynth==0.2
+font-roboto==0.0.1
+fonts==0.0.3
+fonttools==4.38.0
+frozenlist==1.3.3
+fsspec==2023.3.0
+ftfy==6.1.1
+future==0.18.2
+gast==0.4.0
+gdown==4.6.4
+gfpgan==1.3.8
+gin-config==0.5.0
+gitdb==4.0.10
+GitPython==3.1.27
+Glances==3.1.3
+google-api-core==1.34.0
+google-auth==2.16.2
+google-auth-oauthlib==0.4.1
+google-cloud-bigquery-storage==1.1.0
+google-cloud-core==2.3.3
+google-cloud-storage==2.10.0
+google-crc32c==1.5.0
+google-pasta==0.2.0
+google-resumable-media==2.5.0
+googleapis-common-protos==1.58.0
+gradio==3.16.2
+greenlet==2.0.2
+grpcio==1.51.3
+grpcio-status==1.48.2
+gunicorn==20.1.0
+h11==0.12.0
+h5py==2.10.0
+hdfs==2.7.0
+hnswlib==0.7.0
+html5lib==1.0.1
+htmlmin==0.1.12
+httpcore==0.15.0
+httplib2==0.14.0
+httptools==0.5.0
+httpx==0.23.3
+huggingface-hub==0.14.1
+hyperlink==19.0.0
+icdiff==1.9.5
+idna==2.10
+image-tools==1.0.0
+ImageHash==4.3.1
+imageio==2.26.0
+imageio-ffmpeg==0.4.8
+importlib-metadata==5.0.0
+importlib-resources==5.12.0
+incremental==16.10.1
+inflection==0.5.1
+influxdb==5.2.0
+iotop==0.6
+ipykernel==5.2.0
+ipython==7.13.0
+ipython_genutils==0.2.0
+ipywidgets==8.0.2
+itsdangerous==2.1.2
+jdcal==1.0
+jedi==0.15.2
+Jinja2==3.1.2
+jmespath==0.10.0
+joblib==1.2.0
+json5==0.9.10
+jsonmerge==1.8.0
+jsonpatch==1.22
+jsonpickle==3.0.1
+jsonplus==0.8.0
+jsonpointer==2.0
+jsonschema==3.2.0
+jupyter-console==6.0.0
+jupyter-server==1.21.0
+jupyter_client==7.4.4
+jupyter_core==4.11.2
+jupyterlab==3.5.0
+jupyterlab-pygments==0.2.2
+jupyterlab-widgets==3.0.3
+jupyterlab_server==2.16.1
+kaptan==0.5.10
+keras==2.11.0
+Keras-Preprocessing==1.1.2
+keyring==18.0.1
+kiwisolver==1.0.1
+kornia==0.6.7
+langchain==0.0.94
+language-selector==0.1
+lark==1.1.2
+launchpadlib==1.10.13
+lazr.restfulclient==0.14.2
+lazr.uri==1.0.3
+lazy_loader==0.2
+libclang==15.0.6.1
+librosa==0.10.0
+libtmux==0.8.2
+limits==3.5.0
+linkify-it-py==2.0.0
+lit==15.0.7
+llvmlite==0.39.1
+lmdb==1.4.0
+locket==0.2.0
+lpips==0.1.4
+lxml==4.5.0
+lz4==4.3.2
+Mako==1.1.0
+Markdown==3.1.1
+markdown-it-py==2.2.0
+MarkupSafe==2.1.1
+marshmallow==3.19.0
+marshmallow-enum==1.5.1
+matplotlib==3.5.3
+mccabe==0.6.1
+mdit-py-plugins==0.3.5
+mdurl==0.1.2
+mediapy==1.1.6
+MIDIUtil==1.2.1
+missingno==0.5.1
+mistune==2.0.4
+modelscope==1.4.1
+monotonic==1.6
+more-itertools==4.2.0
+moviepy==1.0.3
+mpi4py==3.0.3
+mpmath==1.2.1
+msgpack==1.0.5
+multidict==6.0.4
+multimethod==1.9
+multiprocess==0.70.14
+mypy-extensions==1.0.0
+natsort==8.1.0
+nbclassic==0.4.7
+nbclient==0.7.0
+nbconvert==7.2.2
+nbformat==5.7.0
+nest-asyncio==1.5.6
+netifaces==0.10.4
+networkx==3.0rc1
+nltk==3.8.1
+nose==1.3.7
+notebook==6.0.3
+notebook_shim==0.2.0
+numba==0.56.4
+numexpr==2.7.3
+numpy==1.23.5
+nvidia-cublas-cu11==11.10.3.66
+nvidia-cuda-cupti-cu11==11.7.101
+nvidia-cuda-nvrtc-cu11==11.7.99
+nvidia-cuda-runtime-cu11==11.7.99
+nvidia-cudnn-cu11==8.5.0.96
+nvidia-cufft-cu11==10.9.0.58
+nvidia-curand-cu11==10.2.10.91
+nvidia-cusolver-cu11==11.4.0.1
+nvidia-cusparse-cu11==11.7.4.91
+nvidia-ml-py==7.352.0
+nvidia-nccl-cu11==2.14.3
+nvidia-nvtx-cu11==11.7.91
+oauthlib==3.1.0
+objsize==0.6.1
+olefile==0.46
+omegaconf==2.2.3
+open-clip-torch==2.16.0
+openai==0.27.0
+openai-whisper @ git+https://github.com/Joemgu7/whisper-light.git@aca64f509cb97245184dd184eff5e780f9df693a
+opencv-contrib-python==4.7.0.72
+opencv-python==4.7.0.72
+opencv-python-headless==4.7.0.72
+openpyxl==3.0.3
+opt-einsum==3.3.0
+ordered-set==4.1.0
+orjson==3.8.7
+oss2==2.17.0
+packaging==21.3
+pandas==1.5.1
+pandas-profiling==3.4.0
+pandocfilters==1.4.2
+parameterized==0.8.1
+paramiko==3.1.0
+parso==0.5.2
+partd==1.0.0
+patsy==0.5.3
+pexpect==4.6.0
+phik==0.12.2
+pickleshare==0.7.5
+piexif==1.1.3
+Pillow==9.4.0
+platformdirs==3.1.1
+pluggy==0.13.0
+ply==3.11
+pooch==1.7.0
+portalocker==2.7.0
+potassium==0.0.10
+prettytable==3.6.0
+proglog==0.1.10
+prometheus-client==0.7.1
+promise==2.3
+prompt-toolkit==2.0.10
+proto-plus==1.22.2
+protobuf==3.19.6
+psutil==5.5.1
+ptyprocess==0.7.0
+py==1.8.1
+pyarrow==11.0.0
+pyasn1==0.4.2
+pyasn1-modules==0.2.1
+pybind11==2.10.4
+pycares==4.3.0
+pycocoevalcap==1.2
+pycocotools==2.0.6
+pycodestyle==2.5.0
+pycparser==2.19
+pycryptodome==3.17
+pycryptodomex==3.6.1
+pycuda==2019.1.2
+pydantic==1.10.2
+pyDeprecate==0.3.2
+pydot==1.4.1
+pydub==0.25.1
+pyflakes==2.1.1
+pyFluidSynth @ https://pypi.python.org/packages/source/p/pyFluidSynth/pyFluidSynth-1.2.4.tar.gz#md5=60079310701d0b9298b65a8b6728ffcc
+Pygments==2.13.0
+PyGObject==3.36.0
+pygpu==0.7.6
+PyHamcrest==1.9.0
+pyinotify==0.9.6
+PyJWT==1.7.1
+pymacaroons==0.13.0
+pymongo==3.13.0
+PyNaCl==1.5.0
+pyOpenSSL==23.0.0
+pyparsing==2.4.6
+pyre-extensions==0.0.23
+pyrsistent==0.15.5
+pyserial==3.4
+pysmi==0.3.2
+pysnmp==4.4.6
+PySocks==1.7.1
+pystache==0.5.4
+pytest==4.6.9
+python-apt==2.0.0+ubuntu0.20.4.8
+python-dateutil==2.8.2
+python-debian===0.1.36ubuntu1
+python-dotenv==1.0.0
+python-multipart==0.0.6
+pytools==2019.1.1
+pytorch-lightning==1.7.6
+pytorch-triton==2.0.0+b8b470bc59
+pytz==2022.5
+PyWavelets==1.4.1
+PyYAML==6.0
+pyzmq==24.0.1
+qudida==0.0.4
+rapidfuzz==2.13.7
+realesrgan==0.3.0
+redis==4.5.5
+regex==2022.10.31
+requests==2.29.0
+requests-oauthlib==1.0.0
+requests-unixsocket==0.2.0
+resampy==0.4.2
+resize-right==0.0.2
+responses==0.18.0
+rfc3986==1.5.0
+rich==13.4.1
+rouge-score==0.0.4
+rsa==4.0
+s3transfer==0.6.0
+sacrebleu==2.3.1
+safetensors==0.2.7
+sanic==22.6.2
+sanic-routing==22.3.0
+scikit-cuda==0.5.3
+scikit-image==0.19.2
+scikit-learn==0.22.2.post1
+scipy==1.9.3
+seaborn==0.12.1
+SecretStorage==2.3.1
+Send2Trash==1.8.0
+sentence-transformers==2.2.2
+sentencepiece==0.1.97
+service-identity==18.1.0
+simplejson==3.16.0
+six==1.14.0
+smmap==5.0.0
+sniffio==1.3.0
+sortedcontainers==2.4.0
+sos==4.4
+soundfile==0.12.1
+soupsieve==1.9.5
+soxr==0.3.5
+SQLAlchemy==1.4.46
+ssh-import-id==5.10
+starlette==0.23.1
+statsmodels==0.13.2
+stripe==5.5.0
+sympy==1.11.1
+systemd-python==234
+tables==3.6.1
+tabulate==0.9.0
+taming-transformers-rom1504==0.0.6
+tangled-up-in-unicode==0.2.0
+tb-nightly==2.12.0a20230126
+tenacity==8.2.1
+tensorboard==2.11.2
+tensorboard-data-server==0.6.1
+tensorboard-plugin-wit==1.8.1
+tensorflow==2.11.0
+tensorflow-addons==0.15.0
+tensorflow-datasets==4.4.0
+tensorflow-estimator==2.11.0
+tensorflow-gpu==2.11.0
+tensorflow-io-gcs-filesystem==0.31.0
+tensorflow-metadata==1.12.0
+termcolor==1.1.0
+terminado==0.17.0
+testpath==0.4.4
+Theano==1.0.4
+tifffile==2023.2.28
+timm==0.6.7
+tinycss2==1.2.1
+tmuxp==1.5.4
+tokenizers==0.12.1
+tomli==2.0.1
+toolz==0.9.0
+torch==2.0.0+cu117
+torchaudio==2.0.1+cu117
+torchdiffeq==0.2.3
+torchlibrosa==0.1.0
+torchmetrics==0.11.4
+torchsde==0.2.5
+torchvision==0.15.1+cu117
+tornado==6.2
+tqdm==4.64.1
+traitlets==5.5.0
+trampoline==0.1.2
+transformers==4.29.2
+triton==2.0.0
+Twisted==18.9.0
+typeguard==3.0.1
+typing-inspect==0.8.0
+typing_extensions==4.4.0
+ubuntu-advantage-tools==27.11.2
+uc-micro-py==1.0.1
+ufw==0.36
+ujson==5.7.0
+unattended-upgrades==0.1
+unicodedata2==15.0.0
+urllib3==1.26.13
+uvicorn==0.20.0
+uvloop==0.17.0
+vector-quantize-pytorch==1.6.9
+virtualenv==20.0.17
+visions==0.7.5
+wadllib==1.3.3
+watchfiles==0.18.1
+wcwidth==0.2.6
+webencodings==0.5.1
+websocket-client==0.53.0
+websockets==10.4
+Werkzeug==2.2.2
+wget==3.2
+widgetsnbextension==4.0.3
+wrapt==1.11.2
+xformers==0.0.16rc425
+xlrd==1.1.0
+xlwt==1.3.0
+xxhash==3.2.0
+yapf==0.32.0
+yarl==1.8.2
+zhconv==1.4.3
+zipp==3.15.0
+zope.interface==4.7.1
+zstandard==0.20.0
